crates/php-parser/tests/snapshots/integration__true_false_union_is_invalid.snap
---
source: crates/php-parser/tests/integration.rs
expression: format_errors(&result)
---
Type contains both true and false, bool must be used instead
