crates/php-parser/tests/snapshots/integration__try_catch_basic.snap
---
source: crates/php-parser/tests/integration.rs
expression: "fixture(source, &result.program)"
---
=== source ===
<?php
try {
    $x = riskyOperation();
} catch (Exception $e) {
    echo $e;
} finally {
    cleanup();
}

=== snapshot ===
{
  "stmts": [
    {
      "kind": {
        "TryCatch": {
          "body": [
            {
              "kind": {
                "Expression": {
                  "kind": {
                    "Assign": {
                      "target": {
                        "kind": {
                          "Variable": "x"
                        },
                        "span": {
                          "start": 16,
                          "end": 18
                        }
                      },
                      "op": "Assign",
                      "value": {
                        "kind": {
                          "FunctionCall": {
                            "name": {
                              "kind": {
                                "Identifier": "riskyOperation"
                              },
                              "span": {
                                "start": 21,
                                "end": 35
                              }
                            },
                            "args": []
                          }
                        },
                        "span": {
                          "start": 21,
                          "end": 37
                        }
                      }
                    }
                  },
                  "span": {
                    "start": 16,
                    "end": 37
                  }
                }
              },
              "span": {
                "start": 16,
                "end": 39
              }
            }
          ],
          "catches": [
            {
              "types": [
                {
                  "parts": [
                    "Exception"
                  ],
                  "kind": "Unqualified",
                  "span": {
                    "start": 48,
                    "end": 58
                  }
                }
              ],
              "var": "e",
              "body": [
                {
                  "kind": {
                    "Echo": [
                      {
                        "kind": {
                          "Variable": "e"
                        },
                        "span": {
                          "start": 73,
                          "end": 75
                        }
                      }
                    ]
                  },
                  "span": {
                    "start": 68,
                    "end": 77
                  }
                }
              ],
              "span": {
                "start": 47,
                "end": 79
              }
            }
          ],
          "finally": [
            {
              "kind": {
                "Expression": {
                  "kind": {
                    "FunctionCall": {
                      "name": {
                        "kind": {
                          "Identifier": "cleanup"
                        },
                        "span": {
                          "start": 93,
                          "end": 100
                        }
                      },
                      "args": []
                    }
                  },
                  "span": {
                    "start": 93,
                    "end": 102
                  }
                }
              },
              "span": {
                "start": 93,
                "end": 104
              }
            }
          ]
        }
      },
      "span": {
        "start": 6,
        "end": 106
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 106
  }
}
